logs/sonte.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sonte'...
Listing './lib/python3.5/site-packages/sonte/funcs'...
Compiling './lib/python3.5/site-packages/sonte/funcs/list.py'...
***   File "./lib/python3.5/site-packages/sonte/funcs/list.py", line 24
    yield f'• {note.name(path)}'
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sonte/tools'...
Compiling './lib/python3.5/site-packages/sonte/tools/note.py'...
***   File "./lib/python3.5/site-packages/sonte/tools/note.py", line 28
    path = os.path.join(directory, f'*.{ext}')
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sonte/tools/port.py'...
***   File "./lib/python3.5/site-packages/sonte/tools/port.py", line 25
    return importlib.import_module(f'sonte.{name}')
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sonte-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/toml-0.9.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
